fix(ui/help): update icon color and API docs link
- Change Help dialog icon color to "primary" for consistency.
- Update API documentation link to use the new Swagger UI schema path.

--- a/workspace/files/ui/templates/files/ui/index.html
+++ b/workspace/files/ui/templates/files/ui/index.html
@@ -170,7 +170,7 @@
     <!-- Help Button -->
     <div class="px-3 pb-2">
       <ul class="menu p-0">
-        {% include "ui/partials/drawer_item.html" with icon="circle-help" label="Help" color="info" onclick="document.getElementById('help-dialog').showModal()" tooltip="Help" %}
+        {% include "ui/partials/drawer_item.html" with icon="circle-help" label="Help" color="primary" onclick="document.getElementById('help-dialog').showModal()" tooltip="Help" %}
       </ul>
     </div>
 
