--- a/workspace/mail/ui/templates/mail/ui/partials/compose_dialog.html
+++ b/workspace/mail/ui/templates/mail/ui/partials/compose_dialog.html
@@ -129,13 +129,11 @@
       <!-- Attachments preview -->
       <div class="px-4 flex flex-wrap gap-2" x-show="compose.attachments.length > 0" x-cloak>
         <template x-for="(file, idx) in compose.attachments" :key="idx">
-          <span class="badge badge-sm gap-1.5 pr-1">
+          <span class="badge badge-sm gap-1 pr-0.5">
             <i data-lucide="file" class="w-3 h-3"></i>
             <span class="max-w-32 truncate" x-text="file.name"></span>
-            <button type="button" class="btn btn-ghost btn-circle" style="width:16px;height:16px;min-height:0"
-                    @click="compose.attachments.splice(idx, 1)">
-              <i data-lucide="x" class="w-3 h-3"></i>
-            </button>
+            <button type="button" class="opacity-60 hover:opacity-100 leading-none text-xs"
+                    @click="compose.attachments.splice(idx, 1)">&times;</button>
           </span>
         </template>
       </div>
