--- a/workspace/common/templates/ui/partials/dialogs.html
+++ b/workspace/common/templates/ui/partials/dialogs.html
@@ -6,7 +6,7 @@
       <div id="app-dialog-confirm-icon" class="hidden flex-shrink-0 w-10 h-10 rounded-full flex items-center justify-center"></div>
       <h3 id="app-dialog-confirm-title" class="font-bold text-lg">Confirm</h3>
     </div>
-    <p id="app-dialog-confirm-message" class="py-2 mt-2">Are you sure?</p>
+    <p id="app-dialog-confirm-message" class="py-2 mt-2 break-words">Are you sure?</p>
     <div class="modal-action">
       <form method="dialog">
         <button id="app-dialog-confirm-cancel" class="btn btn-ghost btn-sm">Cancel</button>
@@ -58,7 +58,7 @@
       <div id="app-dialog-message-icon" class="hidden flex-shrink-0 w-10 h-10 rounded-full flex items-center justify-center"></div>
       <h3 id="app-dialog-message-title" class="font-bold text-lg">Message</h3>
     </div>
-    <p id="app-dialog-message-message" class="py-2 mt-2">Done.</p>
+    <p id="app-dialog-message-message" class="py-2 mt-2 break-words">Done.</p>
     <div class="modal-action">
       <form method="dialog">
         <button id="app-dialog-message-ok" class="btn btn-sm">OK</button>
